--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "01_ai_agent",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +14,12 @@
     "@types/node": "^22.10.7",
     "dotenv": "^16.4.7",
     "openai": "^4.79.1",
+    "readline-sync": "^1.4.10",
     "typescript": "^5.7.3",
     "undici": "^7.2.3"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.32",
+    "@types/readline-sync": "^1.4.8"
   }
 }
